--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -5,7 +5,8 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 700px;
+    height: auto;
+    min-height: 700px;
 }
 
 .skinContainer {
