--- a/client/src/components/layouts/Footer.module.css
+++ b/client/src/components/layouts/Footer.module.css
@@ -7,10 +7,15 @@
 }
 
 .footerBgd {
-    background-color: #B1D3E3;
-    position: absolute;
+    /* background-color: #B1D3E3; */
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 100px;
     margin-bottom: -150px;
+}
+
+.footerColor {
+    background-color: #B1D3E3;
+    max-width: none;
 }
